-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.11.1, 5.12.0 Beta 1, 5.12.0, 5.12.1, 5.12.2, 5.12.3, 5.13.0 Alpha 1, 5.13.0 Beta2
-
-
1dc85b95ab0adc1e805d059e2c35c671ef790011 (qt/qtwayland/5.12) 85bb158ddf08aca4d76c13c6a9fcd2637d84d3ea (qt/qtwayland/5.13)
When a browser based on qtwebengine is not shown in wayland, it blocks.
This is most likely caused by waiting on the frame callback, but blocks more than it's supposed to (e.g. copy+paste).
This also happens when the browser has more than one window, and only one of them is hidden.
I was told this works in kwin, but it's observable in rootston/waymonad and probably GNOME.
Tested with qutebrowser and falkon.
- is duplicated by
-
QTBUG-74715 Qt wayland client' main thread blocks if it is not visible on the compositor
-
- Closed
-
- relates to
-
QTBUG-66075 Wayland event dispatcher multi-threading support
-
- Closed
-
-
QTBUG-37677 Events are queued when rendering blocked
-
- Closed
-
- resulted from
-
QT3DS-3308
Support customer project X
-
- In Progress
-
- resulted in
-
QTBUG-72578 Bad performance of QtQuick apps under Wayland
-
- Closed
-
-
QTBUG-82163 [REG: 5.12.3 ->5.12.6] Running animation on i.MX6 starts to get stuttered with CPU load 100%
-
- Closed
-